--- a/environments/azure/aks-eu-tap-4/gitops/desired-namespaces.yaml
+++ b/environments/azure/aks-eu-tap-4/gitops/desired-namespaces.yaml
@@ -11,7 +11,7 @@ metadata:
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: micropets-xxx
+  name: kcd-fr-23
 ---
 apiVersion: v1
 kind: ConfigMap
@@ -36,5 +36,11 @@ data:
       languages: 
       - java
       - golang
+      databases: 
+      - postgres
+    - name: kcd-fr-23
+      languages: 
+      - angular
+      - java
       databases: 
       - postgres
